<resources>
    <string name="app_name">Fragments_2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Редактировать</string>
    <string name="firstname">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="phone">Телефон</string>
    <string name="cancel">Отмена</string>
    <string name="updateRequestKey">update</string>
</resources>